syntax = "proto3";

package services;

import "google/api/annotations.proto";
import "Models.proto";

option go_package="./services";

enum ProdAreas{
  A=0;
  B=1;
  C=2;
}

message ProdRequest{
  int32 prod_id= 1;//传入的商品id
  ProdAreas prod_area =2;
}
message ProdResponse{
  int32 prod_stock= 1; //商品库存
}

message QuerySize {
  int32 size =1;
}

message ProdResponseList{
  repeated ProdResponse prodres =1;
}


service ProdService{
  rpc GetProdStock(ProdRequest) returns (ProdResponse){
    option (google.api.http) = {
      get: "/v1/prod/{prod_id}"

    };
  }

  rpc GetProdStocks(QuerySize) returns (ProdResponseList){}
  rpc GetProdInfo(ProdRequest)returns(ProdModel){}
}